# afv-server

./: .cursorignore  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
afv_server/: __init__.py  __main__.py  auth.py  config.py  crypto.py  http_api.py  models.py  server.py  voice.py
data/: aliased.json
deploy/kubernetes/: workload.yaml
tests/: test_auth.py  test_crypto.py  test_http_api.py  test_server.py  test_voice.py
