[project]
name = "skylite-afv-server"
version = "0.1.0"
description = "Standalone Audio For VATSIM compatible voice server for Skylite."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "cryptography>=42",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
skylite-afv-server = "afv_server.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
